--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,18 @@
 body {
     background-color: #022f40;
     font-family: Arial, sans-serif;
+    color: white;
+}
+* {
     margin: 0;
     padding: 0;
-    color: white;
+    box-sizing: border-box;
 }
 header {
     background-color: #0090c1;
-    padding: 10px 0;
+    padding: 10px;
     text-align: center;
+    margin: 0 0 15px;
 }
 .main_game {
     display: flex;
@@ -29,29 +33,32 @@ header {
 }
 #game-board {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
+    width: 50vw;
 }
 #game-board > div {
-    width: 40vw;
+    width: 35vw;
 }
 h2 {
     text-align: center;
+    margin-bottom: 10px;
 }
 
-#player1-board,
-#player2-board {
+#player-board,
+#computer-board {
     display: grid;
-    gap: 5px;
     padding: 15px;
+    gap: 5px;
+    width: 50%;
+    height: 50%;
 }
 
-#player1-board div,
-#player2-board div {
+#player-board div,
+#computer-board div {
     border: 1px solid #ccc;
-    width: 10px;
-    height: 10px;
+    width: 3px;
+    height: 3px;
     padding: 15px;
     cursor: pointer;
     font-family: Arial, sans-serif;
